Thu Nov 20 11:56:03 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Made a tiny grammatical correction in an informational message.

        * modules/VC8WorkspaceCreator.pm:

          When creating external dependencies, only create a full path using
          the output directory or current directory if the project name is
          not a full path itself.  Thank you to Manfred Peter <manfredpeter
          at siemens dot com> for finding and reporting this bug.

Wed Nov  5 08:12:27 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc1xdll.mpt:
        * templates/vc1xexe.mpt:
          Set same pdbc/pdbl settings to generate pdb files as we do
          with older vc versions

Wed Nov  5 08:03:49 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/templates/vc10.txt:
        * templates/vc10.mpd:
        * templates/vc1xdll.mpt:
        * templates/vc1xexe.mpt:
        * templates/vc7dll.mpt:
          With TAO we have the case that exe and dll have the same
          name which causes problems with the pdb file. Add a new
          use_pdb_modifier which we enable by default for vc1x, it
          adds _dll to the pdb file for a dll, and _exe to the pdb
          file for a exe

Wed Oct  8 13:41:24 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * MPC version 4.1.0 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv TZ)) (set-time-zone-rule UTC) (setq time (format-time-string %a %b %e %H:%M:%S %Z %Y (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: