@@ -1,3 +1,10 @@
+Thu Nov 20 15:05:35 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/VC8WorkspaceCreator.pm:
+
+          Completed the changes for the entry below.  The original
+          modification was not complete.
+
 Thu Nov 20 11:56:03 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/ProjectCreator.pm:
